fixed project tasks not showing, split listRenderer.js for better readability

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 html {
     position: relative;
+    user-select: none;
     /*min-height: 100%;*/
 }
 
